<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tabungan Qurban</string>
    <string name="title_activity_nasabah">NasabahActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_admin">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="selamat_datang">SELAMAT DATANG KEMBALI</string>
    <string name="nasabah">Nasabah Trian</string>
    <string name="fragment_detail_nasabah">Detail Nasabah</string>
    <string name="fragment_jenis_hewan">Jenis Hewan</string>
    <string name="fragment_listnasabah">Daftar Nasabah</string>
    <string name="fragment_profil">Profil</string>
    <string name="label_tambahhewan">Tambah Hewan</string>
    <string name="fragment_iuran">Iuran</string>

    <string name="about" tools:ignore="StringEscaping,Typos">\t kurban merupakan salah satu perintah Allah kepada umat islam, seperti yang ditulis dalam Al Qur'an Surat Kautsar ayat 2. Perintah Kurban pertama kali ditunjukkan kepada Nabi Ibrahim AS, ketika itu beliau diperintahkan oleh Allah SWT melalui mimpi untuk menyembelih putra beliau yaitu Nabi Ismail AS. Qurban merupakan sebuah simbol pembuktian ketaatan terhadap Allah SWT, seperti apa yang telah dilakukan oleh Nabi Ibrahim AS ketika mengikhlaskan putranya (Nabi Ismail AS) untuk disembelih atas perintah Allah SWT. Namun kemudian Allah SWT menggantikannya dengan seekor domba. Selain itu dalam pelaksanaan Qurban juga terkandung nilai kepedulian sosial terhadap sesama manusia. \n \t Tidak semua orang memiliki kemampuan untuk melaksanakan kurban mungkin hanya mereka yang memiliki rizki lebih yang diberikan oleh Allah SWT. Namun demikian kita tidak begitu saja membiarkan diri kita tidak ikut bagian dalam melaksanakan perintah tersebut. banyak cara bagi kita untuk bisa melaksanakan kurban meskipun kita hanya memiliki rizki yang tidak berlebih, salah satu caranya yaitu dengan menabung. Berdasarkan alasan tersebut maka kami ingin ikut mewujudkan harapan bapak/ibu yang mungkin memiliki keinginan melaksanakan kurban dengan cara menabung setiap bulan dengan mendapatkan hewan kurban yang sudah berumur atau memenuhi syarat-syarat hewan kurban.

</string>
</resources>