<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tdn.qurban.admin.ui.home.HomeAdminFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_admin" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.tdn.qurban.admin.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_detail_nasabah"
        android:name="com.tdn.qurban.admin.ui.detailnasabah.DetailNasabahFragment"
        android:label="@string/fragment_detail_nasabah"
        tools:layout="@layout/detail_nasabah_fragment" />
    <fragment
        android:id="@+id/navigation_jenishewan"
        android:name="com.tdn.qurban.admin.ui.jenishewan.JenisHewaFragment"
        android:label="@string/fragment_jenis_hewan"
        tools:layout="@layout/jenis_hewan_fragment" />
    <fragment
        android:id="@+id/navigation_nasabah"
        android:name="com.tdn.qurban.admin.ui.nasabah.NasabahFragment"
        android:label="@string/fragment_listnasabah"
        tools:layout="@layout/nasabah_fragment" />
    <fragment
        android:id="@+id/navigation_profiladmin"
        android:name="com.tdn.qurban.admin.ui.profil.ProfilFragment"
        android:label="@string/fragment_profil"
        tools:layout="@layout/profil_fragment" />
    <fragment
        android:id="@+id/navigation_tabungan"
        android:name="com.tdn.qurban.admin.ui.tabungan.TabunganAdminFragment"
        android:label="@string/fragment_iuran"
        tools:layout="@layout/tabungan_fragment" />
    <fragment
        android:id="@+id/navigation_detail_pengajuandana"
        android:name="com.tdn.qurban.admin.ui.pengajuan.DetailPengajuanDanaFragment"
        android:label="@string/fragment_iuran"
        tools:layout="@layout/detail_pengajuan_pengajuan_fragment" />
    <fragment
        android:id="@+id/navigation_detail_pengajuantarik"
        android:name="com.tdn.qurban.admin.ui.pengajuan.DetailPengajuanTarikFragment"
        android:label="@string/fragment_iuran"
        tools:layout="@layout/detail_pengajuan_fragment" />

    <fragment
        android:id="@+id/navigation_detail_tabungan"
        android:name="com.tdn.qurban.admin.ui.tabungan.DetailTabunganFragment"
        android:label="@string/fragment_iuran"
        tools:layout="@layout/detail_tabungan_fragment" />
    <fragment
        android:id="@+id/navigation_tambahhewan"
        android:name="com.tdn.qurban.admin.ui.jenishewan.TambahHewan"
        android:label="@string/label_tambahhewan"
        tools:layout="@layout/tambah_hewan_fragment" />
    <fragment
        android:id="@+id/navigation_tarikdana"
        android:name="com.tdn.qurban.admin.ui.pengajuan.PenarikanFragment"
        android:label="Pengajuan Penarikan Dana"
        tools:layout="@layout/penarikan_fragment" />
    <fragment
        android:id="@+id/navigation_tutupakun"
        android:name="com.tdn.qurban.admin.ui.pengajuan.PenutupanAkunFragment"
        android:label="Pengajuan Tutup Akun"
        tools:layout="@layout/pengajuan_tutup_akun_fragment" />
</navigation>